--- a/src/index.css
+++ b/src/index.css
@@ -175,11 +175,12 @@ main {
   margin: 4px 2px;
   cursor: pointer;
   border-radius: 5px;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.3s ease, transform 0.2s;
 }
 
 .button:hover {
   background-color: var(--accent-color);
+  transform: scale(1.05);
 }
 
 .hadith-container {
