--- a/src/index.css
+++ b/src/index.css
@@ -245,3 +245,10 @@ main {
     text-align: left;
   }
 }
+
+.qibla-direction {
+  font-size: 1.5rem;
+  color: #2c3e50;
+  margin-top: 20px;
+  text-align: center;
+}
