--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,7 +5,7 @@
   --secondary-color: #e0c9a6;
   --text-color: #333;
   --background-color: #f7f3e8;
-  --accent-color: #8c5e58;
+  --accent-color: #a67c00;
 }
 
 :root[data-theme="dark"] {
@@ -132,7 +132,7 @@ nav ul li:last-child {
 }
 
 nav ul li a {
-  color: var(--secondary-color);
+  color: var(--accent-color);
   text-decoration: none;
   font-size: 1.2em;
   display: block;
@@ -158,7 +158,7 @@ main {
 }
 
 .title {
-  color: var(--primary-color);
+  color: var(--accent-color);
   text-align: center;
   font-family: "Amiri", serif;
   font-size: 2em;
@@ -166,7 +166,7 @@ main {
 }
 
 .subtitle {
-  color: var(--accent-color);
+  color: var(--primary-color);
   text-align: center;
   font-size: 1.2em;
   margin-top: -10px;
