--- a/src/styles/Quran.css
+++ b/src/styles/Quran.css
@@ -1,49 +1,95 @@
 .quran-container {
-  font-size: 18px;
-  line-height: 1.6;
-  padding: 20px;
-  background-color: #ffffff;
-  color: #333;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
-  max-width: 800px;
-  margin: auto;
-}
-
-.page-title {
-  font-size: 2rem;
-  margin-bottom: 20px;
-  color: #1f4e5f;
-  text-align: center;
-}
-
-.ayah-list {
-  max-width: 100%;
   margin: 0 auto;
-  text-align: right;
-  direction: rtl;
+  max-width: 800px;
+  padding: 20px;
+  background-color: var(--background-color);
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s ease;
+}
+
+.quran-container h3.page-title {
+  font-size: 1.8rem;
+  font-weight: bold;
+  text-align: center;
+  color: var(--primary-color);
+  margin-bottom: 20px;
+}
+
+.quran-container .ayah-list {
+  text-align: center;
+  font-size: 1.6rem;
   line-height: 1.8;
+  color: var(--text-color);
 }
 
-.ayah-text {
-  margin-bottom: 15px;
+.quran-container .ayah-list .ayah-text {
+  padding: 10px;
+  background-color: #f1f1f1;
+  margin-bottom: 10px;
+  border-radius: 5px;
+}
+
+.quran-container .ayah-list .ayah-number {
   font-size: 1.2rem;
-  cursor: pointer;
-  transition: color 0.3s ease;
-  position: relative;
-  display: inline;
+  color: var(--accent-color);
 }
 
-.ayah-text:hover {
-  color: #8c5e58;
+.search-surah-container {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 15px;
 }
 
-.ayah-number {
+.search-surah-container select {
+  padding: 8px 12px;
   font-size: 1.1rem;
-  color: #e41313;
-  margin-left: 5px;
-  display: inline;
-  white-space: nowrap;
+  border: 2px solid var(--primary-color);
+  border-radius: 4px;
+}
+
+.search-container {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.search-container input {
+  padding: 8px;
+  border: 2px solid var(--primary-color);
+  border-radius: 4px;
+  font-size: 1rem;
+}
+
+.search-container button {
+  padding: 8px 12px;
+  margin-left: 8px;
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: background-color 0.3s ease;
+}
+
+.search-container button:hover {
+  background-color: var(--accent-color);
+}
+
+.search-results {
+  margin-top: 20px;
+  background-color: #f8f8f8;
+  padding: 15px;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+.search-result-item {
+  padding: 8px;
+  margin-bottom: 10px;
+  background-color: var(--background-color);
+  border-left: 5px solid var(--accent-color);
+  border-radius: 4px;
 }
 
 @media (max-width: 768px) {
