--- a/src/styles/Pagination.css
+++ b/src/styles/Pagination.css
@@ -1,29 +1,25 @@
 .pagination-container {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
   margin-top: 20px;
 }
 
 .pagination-container button {
-  padding: 8px 12px;
-  margin: 0 5px;
-  background-color: var(--primary-color);
-  color: var(--secondary-color);
+  background-color: #1f4e5f;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 10px;
   border: none;
-  border-radius: 4px;
   cursor: pointer;
-  font-size: 1.2rem;
-  transition: background-color 0.3s ease-in-out;
+  transition: background-color 0.3s;
 }
 
 .pagination-container button:hover {
-  background-color: var(--accent-color);
+  background-color: #163b4b;
 }
 
 .pagination-container button:disabled {
-  background-color: var(--background-color);
-  color: var(--text-color);
+  background-color: #ccc;
   cursor: not-allowed;
 }
 
