--- a/src/styles/Quran.css
+++ b/src/styles/Quran.css
@@ -1,37 +1,79 @@
 .quran-container {
-  margin: 0 auto;
-  max-width: 800px;
-  padding: 20px;
-  background-color: var(--background-color);
-  border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  transition: background-color 0.3s ease;
+  font-size: 18px;
+  line-height: 1.8;
+  padding: 30px;
+  background-color: #f9f7f1;
+  color: #333;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
+  max-width: 850px;
+  margin: auto;
+  border: 1px solid #e0c9a6;
+  background-image: url("src\assets\islam.png");
+  background-size: 50%;
+  background-repeat: no-repeat;
+  background-position: center;
   touch-action: pan-y;
 }
 
 .quran-container h3.page-title {
   font-size: 1.8rem;
-  font-weight: bold;
+  margin-bottom: 25px;
+  color: #1f4e5f;
+  font-family: "Scheherazade New", serif;
   text-align: center;
-  color: var(--primary-color);
-  margin-bottom: 20px;
+  position: relative;
+}
+
+.quran-container h3.page-title::before {
+  content: "";
+  width: 80px;
+  height: 2px;
+  background-color: #1f4e5f;
+  position: absolute;
+  top: 50%;
+  left: -100px;
+}
+
+.quran-container h3.page-title::after {
+  content: "";
+  width: 80px;
+  height: 2px;
+  background-color: #1f4e5f;
+  position: absolute;
+  top: 50%;
+  right: -100px;
 }
 
 .quran-container .ayah-list {
-  text-align: center;
-  font-size: 1.6rem;
-  line-height: 1.8;
-  color: var(--text-color);
+  max-width: 100%;
+  margin: 0 auto;
+  text-align: right;
+  direction: rtl;
+  line-height: 2;
+  padding-bottom: 20px;
 }
 
-.quran-container .ayah-list .ayah-text {
+.quran-container .ayah-text {
+  margin-bottom: 20px;
+  font-size: 1.3rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
   padding: 10px;
-  background-color: #f1f1f1;
-  margin-bottom: 10px;
-  border-radius: 5px;
+  font-family: "Scheherazade New", serif;
+  background-color: #fff;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-.quran-container .ayah-list .ayah-number {
+.ayah-text:hover {
+  background-color: #f0e8d8;
+  color: #1f4e5f;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+}
+
+.quran-container .ayah-number {
   font-size: 1.2rem;
   color: var(--accent-color);
 }
@@ -219,6 +261,7 @@
   }
 
   .quran-container .ayah-list .ayah-text {
+    font-size: 1.1rem;
     padding: 8px;
     margin-bottom: 8px;
   }
