combined similar btn styles

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -195,26 +195,21 @@ main {
   gap: 10px;
 }
 
-.button {
+.button,
+.pagination-container button,
+.share-button {
   background-color: var(--primary-color);
-  border: none;
   color: #fff;
-  padding: 10px 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 1em;
-  margin: 4px 5px;
-  cursor: pointer;
+  border: none;
   border-radius: 5px;
+  cursor: pointer;
   transition: background-color 0.3s ease, transform 0.2s;
-  width: 100%;
-  max-width: 200px;
 }
 
-.button:hover {
+.button:hover,
+.pagination-container button:hover,
+.share-button:hover {
   background-color: var(--accent-color);
-  transform: scale(1.05);
 }
 
 .error {
@@ -224,22 +219,6 @@ main {
   padding: 10px;
   border-radius: 5px;
   margin-top: 10px;
-}
-
-.share-button {
-  display: flex;
-  align-items: center;
-  gap: 5px;
-  background-color: var(--primary-color);
-  color: white;
-  border: none;
-  padding: 8px 12px;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.share-button:hover {
-  background-color: var(--accent-color);
 }
 
 @media (min-width: 768px) {
